fix spacing and center images for order cards

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -45,29 +45,12 @@
   </nav>
 
   <div class="container">
-    <h2 class="display-6 ps-4 text-center mb-4" id="financialH2">Financials</h2>
 
-    <div class="row">
-      <div class="col d-flex mb-4">
-        <div class="card card-financial">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.
-            </p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h2 class="display-6 text-center mt-4 mb-4">Current Orders</h2>
 
-    <h2 class="display-6 text-center ps-4 mt-4 mb-4">Current Orders</h2>
-
-    <div class="mx-3 mx-md-0 gx-4 gx-lg-5 row scrollView">
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-odd order-card mb-4">
+    <div class="row scrollView">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -93,13 +76,15 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-even order-card mb-4">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather</h6>
@@ -125,14 +110,16 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/Vintage-Watch-Hunting-Club-Green_002_06489617-9b7a-485c-a229-4800d4f0e0bb.jpg"
-              class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/Vintage-Watch-Hunting-Club-Green_002_06489617-9b7a-485c-a229-4800d4f0e0bb.jpg"
+                class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-odd order-card mb-4">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">Kaylee's Wedding</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Monogramed Napkins</h6>
@@ -158,13 +145,15 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/monogram-linen-napkins-linoroom.jpg" class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/monogram-linen-napkins-linoroom.jpg" class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-even order-card mb-4">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -190,13 +179,15 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-even order-card mb-4">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch Ballcap with Leather Patch
@@ -223,14 +214,16 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/Vintage-Watch-Hunting-Club-Green_002_06489617-9b7a-485c-a229-4800d4f0e0bb.jpg"
-              class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/Vintage-Watch-Hunting-Club-Green_002_06489617-9b7a-485c-a229-4800d4f0e0bb.jpg"
+                class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
-        <div class="card card-odd order-card mb-4">
+      <div class="col-xl-4 col-md-6">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -256,7 +249,9 @@
               </li>
             </ul>
             <hr>
-            <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            <div class="d-flex justify-content-center">
+              <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+            </div>
           </div>
         </div>
       </div>
