--- a/frontend/src/orderReview/index.html
+++ b/frontend/src/orderReview/index.html
@@ -164,11 +164,6 @@
                 id="designNumber">1</output>
             </div>
             <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 " style="display: none">
-              <label class="form-label" for="designNumberGarments"></label>
-              <output class="form-control border border-dark" type="text" name="designNumberGarments"
-                id="designNumberGarments">1</output>
-            </div>
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 " style="display: none">
               <label class="form-label" for="numberOfDesigns"></label>
               <output class="form-control border border-dark" type="text" name="numberOfDesigns"
                 id="numberOfDesigns">1</output>
@@ -315,7 +310,7 @@
             <div class="flex-row d-flex justify-content-between">
               <label class="form-label" for="designTotalItems">Items In Design: </label>
               <output class="form-inline border border-dark" type="text" name="designTotalItems" id="designTotalItems"
-                style="padding:5px">
+                style="padding:5px">0</output>
             </div>
           </div>
 
