--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -48,9 +48,9 @@
 
     <h2 class="display-6 text-center mt-4 mb-4">Current Orders</h2>
 
-    <div class="row scrollView">
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+    <div class="row m-0 justify-content-start scrollView">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card  mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -83,8 +83,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather</h6>
@@ -118,8 +118,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
           <div class="card-body">
             <h5 class="card-title">Kaylee's Wedding</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Monogramed Napkins</h6>
@@ -152,8 +152,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -186,8 +186,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch Ballcap with Leather Patch
@@ -222,8 +222,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6">
-        <div class="card order-card mx-auto mb-4">
+      <div class="col-xxl-3 col-lg-4 col-md-6">
+        <div class="card order-card mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
