--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -44,79 +44,70 @@
     </div>
   </nav>
 
-  <div class="container-lg">
-    <div class="row">
-      <div class=" col-11 col-lg-12 custombar mx-auto mt-5">
-        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="33"
-          aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 33%">33%</div>
+  <div class="container max-container-size">
+    <form action="/orderSubmit" method="post">
+      <h1 class="display-4 text-center">Order Form</h1>
+      <hr class="border border-primary border-3 opacity-75">
+      <div class="row px-3 px-md-0">
+        <div class="col-sm-6 mb-3">
+          <label class="form-label" for="firstName">First Name</label>
+          <input class="form-control border border-dark" type="text" name="firstName" id="firstName">
+        </div>
+        <div class="col-sm-6 mb-3">
+          <label class="form-label" for="lastName">Last Name</label>
+          <input class="form-control border border-dark" type="text" name="lastName" id="lastName">
         </div>
       </div>
-    </div>
-    <form action="/orderSubmit" method="post">
-      <div class="d-flex flex-column justify-content-center align-items-center mx-auto mt-5 p-2" id="orderForm">
-        <h1 class="display-4">Order Form</h1>
-        <div class="col-11 col-lg-12 mx-auto mb-3 ">
-          <hr class="border border-primary border-3 opacity-75">
-        </div>
 
-        <div class="col-11 col-lg-12 mx-auto">
-          <div class="row">
-            <div class="col-12 col-sm-6 mb-3">
-              <label class="form-label" for="firstName">First Name</label>
-              <input class="form-control border border-dark" type="text" name="firstName" id="firstName">
-            </div>
-            <div class="col-12 col-sm-6 mb-3">
-              <label class="form-label" for="lastName">Last Name</label>
-              <input class="form-control border border-dark" type="text" name="lastName" id="lastName">
-            </div>
-          </div>
-        </div>
-
-        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+      <div class="row px-3 px-md-0">
+        <div class="col mb-3">
           <label class="form-label" for="organization">Organization</label>
           <input class="form-control border border-dark" type="text" name="organization" id="organization"
             placeholder="example: Claxton High School">
         </div>
+      </div>
 
-        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+      <div class="row px-3 px-md-0">
+        <div class="col mb-3">
           <label class="form-label" for="email">Email</label>
           <input class="form-control border border-dark" type="email" name="email" id="email"
             placeholder="coach.sport@chs.com">
         </div>
+      </div>
 
-        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+      <div class="row px-3 px-md-0">
+        <div class="col mb-3">
           <label class="form-label" for="phone">Phone</label>
           <input class="form-control border border-dark" type="tel" name="phone" id="phone" placeholder="(987)654-3210">
         </div>
+      </div>
 
-        <div class="col-11 col-lg-12 mx-auto">
-          <div class="row">
-            <div class="col-12 col-sm-5 mb-3">
-              <label class="form-label" for="requestedDeliveryDate">Due Date</label>
-              <input class="form-control border border-dark" type="date" name="requestedDeliveryDate"
-                id="requestedDeliveryDate">
-            </div>
-            <div class="col-12 col-sm-7 mb-3">
-              <label class="form-label" for="taxExemption">Tax-Exemption</label>
-              <input class="form-control border border-dark" type="text" name="taxExemption" id="taxExemption">
-            </div>
-          </div>
+      <div class="row px-3 px-md-0">
+        <div class="col-sm-5 mb-3">
+          <label class="form-label" for="requestedDeliveryDate">Due Date</label>
+          <input class="form-control border border-dark" type="date" name="requestedDeliveryDate"
+            id="requestedDeliveryDate">
         </div>
 
-        <div class="col-11 col-lg-12 justify-content-end mb-3">
-          <div class="d-flex flex-row-reverse">
-            <div class="col-4 col-sm-3 ps-2">
-              <input class="form-control btn btn-primary" type="button" value="button" id="submitButton">
-            </div>
-            <div class="col-4 col-sm-3 pe-2">
-              <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
-                GetOrder
-              </button>
-            </div>
-          </div>
+        <div class="col-sm-7 mb-3">
+          <label class="form-label" for="taxExemption">Tax-Exemption</label>
+          <input class="form-control border border-dark" type="text" name="taxExemption" id="taxExemption">
         </div>
       </div>
+
+      <div class="d-flex flex-row-reverse px-3 px-md-0 mb-3">
+        <div class="col-4 ps-2">
+          <input class="form-control btn btn-primary" type="button" value="Add Design" id="submitButton">
+        </div>
+
+        <div class="col-3 pe-2">
+          <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
+            Reset
+          </button>
+        </div>
+      </div>
+
+
     </form>
   </div>
 </body>
