Clean Up Merge from UIplayground

--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="container max-container-size">
-    <form action="/orderSubmit" method="post">
+    <form action="/orderSubmit" method="post" id="orderForm">
       <h1 class="display-4 text-center">Order Form</h1>
       <hr class="border border-primary border-3 opacity-75">
       <div class="row px-3 px-md-0">
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-3 pe-2">
-          <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
+          <button class="form-control btn btn-outline-secondary" id="resetForm" type="button">
             Reset
           </button>
         </div>
