--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -96,15 +96,10 @@
       </div>
 
       <div class="d-flex flex-row-reverse px-3 px-md-0 mb-3">
-        <div class="col-4 ps-2">
-          <input class="form-control btn btn-primary" type="button" value="Add Design" id="submitButton">
-        </div>
-
-        <div class="col-3 pe-2">
-          <button class="form-control btn btn-outline-secondary" id="resetForm" type="button">
-            Reset
-          </button>
-        </div>
+        <input class="form-control btn btn-primary ms-2" type="button" value="Add Design" id="submitButton">
+        <button class="form-control btn btn-outline-secondary me-2" id="resetForm" type="button">
+          Reset
+        </button>
       </div>
 
 
