--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -49,18 +49,20 @@
     <hr class="border border-primary border-3 opacity-75">
 
     <div class="row justify-content-center mb-3">
-      <div class="d-flex col-1 align-items-center">
-        <button class="btn design-selector text-center">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-            class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
-          </svg>
-        </button>
+      <div class="col-1 align-self-center p-0">
+        <div class="d-flex justify-content-center">
+          <button class="btn design-selector p-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+              class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+            </svg>
+          </button>
+        </div>
       </div>
 
-      <div class="col-10 col-sm-6">
-        <div class="card order-card  mb-4">
+      <div class="col-9 p-0">
+        <div class="card order-card mx-auto mb-4">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -93,14 +95,16 @@
         </div>
       </div>
 
-      <div class="col-1 d-flex align-items-center">
-        <button class="btn design-selector text-center">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-          </svg>
-        </button>
+      <div class="col-1 align-self-center p-0">
+        <div class="d-flex justify-content-center">
+          <button class="btn design-selector p-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+              class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+            </svg>
+          </button>
+        </div>
       </div>
 
     </div>
