--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -47,6 +47,7 @@
   <div class="container">
 
     <h2 class="display-6 text-center mt-4 mb-4">Current Orders</h2>
+    <hr class="border border-primary border-3 opacity-75">
 
     <div class="row m-0 justify-content-start scrollView">
       <div class="col-xxl-3 col-lg-4 col-md-6">
