Initial Garment Detail Table
Table looks great on Desktop. Unusable on mobile. Most likely going to need to reduce the number of columns and have the details displayed in a modal.

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -121,6 +121,56 @@
 
     </div>
 
+    <!-- Garment Design -->
+    <div class="row justify-content-center mb-3" id="showGarment">
+      <div class="col">
+        <h4 class="text-center">Garment Details</h4>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Garment</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Size</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Cost</th>
+
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+                <td>@fat</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry the Bird</td>
+                <td></td>
+                <td>@twitter</td>
+                <td>@twitter</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- Vinyl Design -->
     <div class="row justify-content-center mb-3" id="showVinylize">
       <div class="col">
         <h4 class="text-center">Vinylize Details</h4>
